Support svgz buttons in Aurorae themes

The Aurorae decoration engine in KWin checks for svgz icons if the svg
does not exist. Do the same thing here.

BUG: 432712


(cherry picked from commit 0bea4e6eb884d3a355296712af08d5a2b21a11bf)